<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Affirmations</string>
    <string name="add_affirmation_title">My Affirmations</string>
    <string name="add_affirmation_hint">Add Your Affirmations Here</string>
    <string name="categories">CATEGORIES</string>
    <string name="remember_these">Always Remember These:</string>
    <string name="no_favorites">You have no favorite affirmations yet.</string>
    <string name="main_quote">Color the picture life paints for you with your positive touches.</string>
    <string name="categoriess">Categories</string>
    <string name="breathing_exercise">Breathing Exercise</string>
    <string name="button_settings">Settings</string>
    <string name="breathing_instruction">Let\'s get started.\nIt\'s very important to listen to your breath during this process..</string>
    <string name="start_button">Start</string>
    <string name="end_button">End</string>
    <string name="completed_rounds">Completed Rounds: 0/4</string>
    <string name="initial_image_description">Initial Image</string>
    <string name="toast_empty_affirmation">Please enter an affirmation text</string>
    <string name="favorite_affirmations">My Favorite Affirmations</string>
    <string name="general_affirmations">General Affirmations</string>
    <string name="body_affirmations">Body Affirmations</string>
    <string name="faith_affirmations">Faith Affirmations</string>
    <string name="bad_days_affirmations">Tough Days Affirmations</string>
    <string name="love_affirmations">Love Affirmations</string>
    <string name="self_value_affirmations">Self-Worth Affirmations</string>
    <string name="stress_affirmations">Stress and Anxiety Affirmations</string>
    <string name="positive_thought_affirmations">Positive Thought Affirmations</string>
    <string name="success_affirmations">Success Affirmations</string>
    <string name="personal_development_affirmations">Personal Development Affirmations</string>
    <string name="time_management_affirmations">Time Management Affirmations</string>
    <string name="relationship_affirmations">Relationship Affirmations</string>
    <string name="prayer_affirmations">Prayer and Request</string>
    <string name="own_affirmations">My Own Affirmations</string>
    <string name="general">General</string>
    <string name="body">Body</string>
    <string name="faith">Faith</string>
    <string name="bad_days">Tough Days</string>
    <string name="love">Love</string>
    <string name="self_value">Self-Worth</string>
    <string name="stress">Stress</string>
    <string name="positive_thought">Positive Thought</string>
    <string name="success">Success</string>
    <string name="personal_development">Personal Development</string>
    <string name="time_management">Time Management</string>
    <string name="relationship">Relationship</string>
    <string name="prayer">Prayer</string>
    <string name="favorites">Favorites</string>
    <string name="add_buton">There is no affirmation yet. You can add an affirmation by clicking the + button.</string>
    <string name="breathingIntro">The 4-7-8 breathing technique was developed by Dr. Andrew Weil. \n\nThe aim of this technique is to reduce stress levels, \nimprove heart health, \nand enhance sleep quality. \n\nThe physiological effects of the 4-7-8 breathing technique include a slower heart rate, \nreduced blood pressure, \ndecreased cortisol (stress hormone) levels, \nand increased melatonin (sleep hormone) levels. \n\nThis helps the body to relax and reduces stress.</string>
    <string name="nefes2">Before starting the 4-7-8 breathing technique, let\'s see how it is done.\n\nSteps:\n\n1-Preparation: Sit or lie down in a comfortable position, place your tongue behind your upper teeth.\n\n2-Inhale: Silently inhale through your nose for 4 seconds.\n\n3-Hold: Hold your breath for 7 seconds.\n\n4-Exhale: Exhale audibly through your mouth for 8 seconds.\n\nThese steps should be repeated 4 times.\n\nPracticing twice a day (morning and evening) can be a good start.</string>
    <string name="nefestext">4-7-8 Breathing Technique</string>
    <string name="introLanguageSelect">Language Selection</string>
    <string name="introLanguagetext">Please select a language</string>
    <string name="introLanguagebutton">Save</string>
    <string name="introBildirim">Notification Selection</string>
    <string name="introBildirimbutton">Add</string>
    <string name="introBildirimtext">Please select a category and time</string>
    <string name="settings">Settings</string>
    <string name="settingsbutton1">Select Language</string>
    <string name="settingsbutton2">Confıgure Notıfıcatıons</string>
    <string name="settingstext">Category and Notification Times</string>
    <string name="nefesintrotext">4-7-8 Breathing Technique:\n What Is It\n and Why Is It Important?</string>
    <string name="nefesintrobuton">Next</string>
    <string name="nefesAl">Inhale</string>
    <string name="nefesTut">Hold Breath</string>
    <string name="nefesVer">Exhale</string>
    <string name="nefestext2">Completed Rounds </string>
    <string name="breathing_exercise_complete">Your breathing exercise is complete.\nKeep taking good care of yourself.</string>
    <string name="note_to_myself">Note to Myself:</string>
    <string name="okey">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="splash">Always remember, a small shift in thinking can create big changes.</string>
    <string name="favories_not_title">Remove Affirmation from Favorites</string>
    <string name="favories_not">Are you sure you want to remove this affirmation from favorites?</string>
    <string name="first_page_main_title">Welcome!\n You’re starting something that will make you feel great and do wonders for you.</string>
    <string name="first_page_main_text">Would you like to feel better and add a positive touch to your life? \nWith our app, you can nourish your mind and soul every day through the affirmations provided.\n Remember, a small shift in thinking can create a big impact. \n\nCome on, take a beautiful step for yourself now!</string>
    <string-array name="categoriesNotification">
        <item>General Affirmations</item>
        <item>Body Affirmations</item>
        <item>Faith Affirmations</item>
        <item>Tough Days Affirmations</item>
        <item>Love Affirmations</item>
        <item>Self-Worth Affirmations</item>
        <item>Stress and Anxiety Affirmations</item>
        <item>Positive Thought Affirmations</item>
        <item>Success Affirmations</item>
        <item>Personal Development Affirmations</item>
        <item>Time Management Affirmations</item>
        <item>Relationship Affirmations</item>
        <item>Prayer and Request</item>
    </string-array>
    <string-array name="languagesSelect">
        <item>Please select a language</item>
        <item>Türkçe</item>
        <item>English</item>
    </string-array>
</resources>