<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.IntroUserNotificationSelectActivity">

    <!-- Content wrapper with weight to take up available space -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:id="@+id/basliknotification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingRight="15dp"
            android:layout_marginBottom="20dp"
            android:paddingLeft="1dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:gravity="left"
            android:text="@string/introBildirim"
            android:textColor="#000000"
            android:textSize="22sp"
            android:textStyle="bold"
            android:drawableStart="@drawable/settings_icon"
            android:drawablePadding="8dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#000000" />

        <TextView
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/introBildirimtext"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center" />

        <!-- Üst satır: Mesaj Seçimi, Saat Butonu ve Ekle Butonu -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <!-- Mesaj Seçimi için Spinner -->
            <Spinner
                android:id="@+id/spinnerCategories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft= "20dp"
                />

            <!-- Saat Seçim Butonu -->
            <Button
                android:id="@+id/timeButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@android:drawable/ic_menu_recent_history" />

            <!-- Ekle Butonu -->
            <Button
                android:id="@+id/btnAddTime"
                android:background="@drawable/buttonnotification"
                android:layout_width="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content"
                android:text="@string/introBildirimbutton" />
        </LinearLayout>

        <!-- Alt satır: Eklenen Mesajlar ve Saatler -->
        <LinearLayout
            android:id="@+id/alarmsContainer"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp">
            <!-- Eklenen mesaj ve saat bilgileri dinamik olarak buraya eklenecek -->
        </LinearLayout>
    </LinearLayout>

    <!-- Save button aligned at the bottom -->
    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/okey"
        android:textStyle="bold"
        android:background="@drawable/buttonnotification"
        android:layout_gravity="center"
        android:layout_marginBottom="7dp" />

</LinearLayout>
