<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.BreathingIntroActivity"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/basliknfs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:fontFamily="@font/lobster"
        android:letterSpacing="0.09"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:gravity="center_horizontal"
        android:text="@string/first_page_main_title"
        android:textColor="#000000"
        android:textSize="22sp"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-4dp"
        android:layout_marginRight="-4dp"
        android:layout_marginTop="-30dp"
        android:src="@drawable/line_7"
        />
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingBottom="20dp"
        android:layout_marginBottom="-30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/tvBreathingIntro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:fontFamily="@font/lobster"
            android:letterSpacing="0.09"
            android:layout_gravity="center"
            android:padding="20dp"
            android:text="@string/first_page_main_text"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

    </ScrollView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="-40dp"
        >

        <ImageView
            android:id="@+id/imageIconNext"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:src="@drawable/introflower"
            android:layout_marginBottom="-30dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            />

        <Button
            android:id="@+id/btnCnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="70dp"
            android:background="@drawable/buttonmain"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/nefesintrobuton"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:visibility="visible"
            />



    </RelativeLayout>
</LinearLayout>